--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ super.admin.default.password=${SUPER_ADMIN_PASSWORD:admin}
 jwt.secret.key=${JWT_SECRET_KEY:ReKJZW6VekQl9blL2NSD9PeOmU65d8tq}
 refresh.secret.key=${REFRESH_SECRET_KEY:9St9275RBcn2RCucOffCbYDnYjhvt94q}
 
-storage.dir=${STORAGE_DIR:storage}
+storage.dir=storage
 
 management.endpoints.web.exposure.include=health
 springdoc.show-actuator=true
